objects/Case.object
<CustomObject>
    <fields>
        <fullName>DB_Case_Duration_Hours__c</fullName>
        <label>DB Case Duration Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DB_Hours__c</fullName>
        <description>This is used for the &quot;Perfect Data&quot; SE tool</description>
        <label>DB Hours</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DateTime_Closed_c__c</fullName>
        <label>DateTime Closed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DateTime_Opened_c__c</fullName>
        <label>DateTime Opened</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EDY_ORGCUSTOM__DB__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EDY_ORGCUSTOM__Old_Description__c</fullName>
        <label>Old Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EDY_ORGCUSTOM__Old_Subject__c</fullName>
        <label>Old Subject</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ORGCUSTOM4_DB__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ORGCUSTOM4_DB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Org_Cust_Case_ID__c</fullName>
        <label>Org Cust Case ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rrde__Assign_via_Round_Robin__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assign via Round Robin</label>
        <referenceTo>rrde__Round_Robin_Users__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rrde__Do_not_Apply_Round_Robin__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box if you do not want to apply round robin for this record.</description>
        <inlineHelpText>Check this box if you do not want to apply round robin for this record.</inlineHelpText>
        <label>Do not Apply Round Robin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rrde__EngineeringReqNumber__c</fullName>
        <label>Engineering Req Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rrde__PotentialLiability__c</fullName>
        <label>Potential Liability</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rrde__Product__c</fullName>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GC1040</fullName>
                </value>
                <value>
                    <fullName>GC1060</fullName>
                </value>
                <value>
                    <fullName>GC3020</fullName>
                </value>
                <value>
                    <fullName>GC3040</fullName>
                </value>
                <value>
                    <fullName>GC3060</fullName>
                </value>
                <value>
                    <fullName>GC5020</fullName>
                </value>
                <value>
                    <fullName>GC5040</fullName>
                </value>
                <value>
                    <fullName>GC5060</fullName>
                </value>
                <value>
                    <fullName>GC1020</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rrde__RRD_Assignment_Rule__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check the box, if you want to run RRD assignment rule on update.</description>
        <inlineHelpText>Check the box, if you want to run RRD assignment rule on update.</inlineHelpText>
        <label>RRD Assignment Rule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rrde__Round_Robin_Assign_Datetime__c</fullName>
        <description>Round Robin Assign Datetime</description>
        <inlineHelpText>Round Robin Assign Datetime</inlineHelpText>
        <label>Round Robin Assign Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rrde__Round_Robin_Criteria__c</fullName>
        <formula>&quot;Case Origin:&quot; &amp; TEXT(Origin) &amp; &quot;;&quot; &amp; &quot;Case Reason:&quot; &amp;  TEXT(Reason)</formula>
        <label>Round Robin Criteria</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rrde__SLAViolation__c</fullName>
        <label>SLA Violation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rrde__User_assigned_by_RRD__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Capture the User on Lead when record is assigned by RRD</description>
        <inlineHelpText>Capture the User on Lead when record is assigned by RRD</inlineHelpText>
        <label>User assigned by RRD</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <listViews>
        <fullName>Round_Robin_Queue_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Round Robin Queue</label>
        <queue>Round_Robin_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>rrde__Cant_Run_RRD_on_Do_not_apply_RRD</fullName>
        <active>true</active>
        <description>If do not apply RRD box is checked , you can not check RRD assignment box</description>
        <errorConditionFormula>rrde__Do_not_Apply_Round_Robin__c  = true  &amp;&amp;  rrde__RRD_Assignment_Rule__c = true</errorConditionFormula>
        <errorMessage>You can not check &apos;Do not Apply Round Robin&apos; and &apos;RRD Assignment Rule&apos; at same time.</errorMessage>
    </validationRules>
</CustomObject>